# movieratings

./: .dockerignore  Dockerfile  docker-compose.yml
.github/workflows/: checks.yml
backend/: .pdm.toml  pyproject.toml  requirements.dev.txt  requirements.txt
backend/app/base/: settings.py  urls.py
backend/app/movies/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/movies/migrations/: 0001_initial.py
backend/app/tests/: conftest.py  test_commands.py  test_models.py
backend/app/user/: admin.py  models.py  urls.py
backend/app/user/migrations/: 0001_initial.py
backend/app/utils/management/commands/: pytest.py
